force-app/main/default/objects/AcornProductTypes__mdt/AcornProductTypes__mdt.object-meta.xml
<CustomObject>
    <label>Acorn Product Type</label>
    <pluralLabel>Acorn Product Types</pluralLabel>
</CustomObject>