force-app/main/default/objects/AcornProductTypes__mdt/fields/Acorn_Equipment_Code__c.field-meta.xml
<CustomField>
    <fullName>Acorn_Equipment_Code__c</fullName>
    <label>Acorn Equipment Code</label>
    <length>10</length>
    <required>true</required>
    <type>Text</type>
</CustomField>