force-app/main/default/objects/AcornProductTypes__mdt/fields/Default_UOM__c.field-meta.xml
<CustomField>
    <fullName>Default_UOM__c</fullName>
    <label>Default UOM</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Inches</fullName>
            </value>
            <value>
                <fullName>Feet</fullName>
            </value>
            <value>
                <fullName>Yards</fullName>
                <default>true</default>
                <label>Yards</label>
            </value>
            <value>
                <fullName>Gallons</fullName>
            </value>
            <value>
                <fullName>None</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>