force-app/main/default/objects/AcornProductTypes__mdt/fields/Maximum_Size__c.field-meta.xml
<CustomField>
    <fullName>Maximum_Size__c</fullName>
    <label>Maximum Size</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>