force-app/main/default/objects/AcornProductTypes__mdt/fields/Minimum_Size__c.field-meta.xml
<CustomField>
    <fullName>Minimum_Size__c</fullName>
    <label>Minimum Size</label>
    <precision>3</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>