force-app/main/default/objects/AcornProductTypes__mdt/fields/Product_Family__c.field-meta.xml
<CustomField>
    <fullName>Product_Family__c</fullName>
    <label>Product Family</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Commercial</fullName>
                <default>true</default>
                <label>Commercial</label>
            </value>
            <value>
                <fullName>Rolloff</fullName>
            </value>
            <value>
                <fullName>Services</fullName>
            </value>
            <value>
                <fullName>Supplies</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>