force-app/main/default/objects/AcornProductTypes__mdt/fields/Product_Type__c.field-meta.xml
<CustomField>
    <fullName>Product_Type__c</fullName>
    <label>Product Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Dumpster</fullName>
                <default>true</default>
                <label>Dumpster</label>
            </value>
            <value>
                <fullName>Toter</fullName>
            </value>
            <value>
                <fullName>Hand Pickup</fullName>
            </value>
            <value>
                <fullName>Carts</fullName>
            </value>
            <value>
                <fullName>Vertical Compactor</fullName>
            </value>
            <value>
                <fullName>Compactor</fullName>
            </value>
            <value>
                <fullName>Open Top</fullName>
            </value>
            <value>
                <fullName>Baler</fullName>
            </value>
            <value>
                <fullName>Box</fullName>
            </value>
            <value>
                <fullName>Compactor - Self-Contained</fullName>
            </value>
            <value>
                <fullName>Compactor Box Only</fullName>
            </value>
            <value>
                <fullName>Storage Container</fullName>
            </value>
            <value>
                <fullName>Trailer</fullName>
            </value>
            <value>
                <fullName>Holding Tank</fullName>
            </value>
            <value>
                <fullName>Portable Standard Restroom</fullName>
            </value>
            <value>
                <fullName>Double Hand Washing Station</fullName>
            </value>
            <value>
                <fullName>None</fullName>
            </value>
            <value>
                <fullName>Portable Handicap Restroom</fullName>
            </value>
            <value>
                <fullName>Portable Hi-Rise Restroom</fullName>
            </value>
            <value>
                <fullName>Single Hand Washing Station</fullName>
            </value>
            <value>
                <fullName>Washout Container</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>