force-app/main/default/objects/AcornProductTypes__mdt/fields/SortOrder__c.field-meta.xml
<CustomField>
    <fullName>SortOrder__c</fullName>
    <label>SortOrder</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>