force-app/main/default/objects/AcornProductTypes__mdt/fields/Type_Group__c.field-meta.xml
<CustomField>
    <fullName>Type_Group__c</fullName>
    <label>Type Group</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Equipment</fullName>
                <default>true</default>
                <label>Equipment</label>
            </value>
            <value>
                <fullName>Sizes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>